# haskellnautas

./: README.md  hakyll-haskellnautas.cabal  stack.yaml
docs/: CNAME  archive.html  index.html
docs/archivo/: index.html
docs/articulos/2015-08-23-example/: index.html
docs/articulos/2016-11-02-bienvenidos-a-haskellnautas/: index.html
docs/articulos/2017-01-22-creando-una-comunidad-de-haskell/: index.html
docs/articulos/2017-03-01-programacion-aplicativa/: index.html
docs/articulos/2018-05-29-haskell-con-katas-introduccion-a-codewars/: index.html
docs/articulos/2018-05-31-haskell-con-katas-introduccion-a-codewars/: index.html
docs/autores/anler/: index.html
docs/borradores/: 2016-11-02-introduccion-a-elm.html  index.html
docs/comunidad/: index.html
docs/css/: main.css  milligram.min.css
docs/js/: highlight.pack.js
docs/posts/: 2015-08-23-example.html
src/: Main.hs
src/Haskellnautas/: Config.hs  Html.hs  Routes.hs  Time.hs
static/: CNAME
static/articulos/: 2015-08-23-example.markdown  2016-11-02-bienvenidos-a-haskellnautas.md  2017-01-22-creando-una-comunidad-de-haskell.md  2017-03-01-programacion-aplicativa.md  2018-05-31-haskell-con-katas-introduccion-a-codewars.md
static/borradores/: 2016-11-02-introduccion-a-elm.md
static/css/: default.hs  main.css
static/pages/: comunidad.md  index.html
static/posts/: 2015-08-23-example.markdown
static/templates/: archive.html  author.html  base.html  draft.html  drafts.html  header-draft.html  header.html  home.html  main.html  page.html  post-list.html  post.html  simple.html  tag-list.html
(+8 files in other folders)
