name:                hakyll-haskellnautas
version:             0.1.0.0
synopsis:            Static website for haskellnautas.
description:         Please see README.md
homepage:            https://github.com/haskellMAD/hakyll-haskellnautas#readme
license:             BSD3
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable site
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  default-extensions:  OverloadedStrings
  build-depends:       base == 4.*,
                       hakyll == 4.7.*,
                       pandoc == 1.16.*,
                       containers == 0.5.*
